@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-09T16:28:41Z",
+  "timestamp" : "2022-11-10T08:32:28Z",
   "count_outdated" : 223,
   "uniques_outdated" : 77,
-  "count" : 242,
+  "count" : 241,
   "uniques" : 87,
   "clones" : [
     {
       "timestamp": "2022-10-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
