@@ -1,10 +1,10 @@
 {
-  "count": 19,
+  "count": 18,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-10-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
