@@ -1,3 +1,11 @@
+2022-11-10T08:32:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3435183457 # 215
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 77 223 / 87 242
+* notice: next accum: outdated-unq outdated-all / unq all: 77 223 / 87 241
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-27]
+
 2022-11-09T16:28:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429958194 # 213
 * notice: last 14d: unq all: 4 19
